<!--
  Copyright 2024 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="load_test_sdk">Load TestSDK</string>
    <string name="unload_test_sdk">Unload TestSDK</string>
    <string name="load_mediatee_sdk">Load MediateeSDK</string>
    <string name="unload_mediatee_sdk">Unload MediateeSDK</string>
    <string name="load_mediatee_sdk_from_sdk">SDK: Load MediateeSDK</string>
    <string name="cuj_list">CUJs list</string>
    <string name="sandbox_sdks_cuj">Loaded Sdks CUJ</string>
    <string name="app_sdks_cuj">AppOwned Sdks CUJ</string>
    <string name="sandbox_death_cuj">Sandbox Death CUJ</string>
    <string name="get_client_package_cuj">Get Client Package CUJ</string>
    <string name="sdk_context_cuj">SdkContext CUJ</string>
    <string name="client_importance_listener_cuj">ClientImportanceListener CUJ</string>
    <string name="sdk_activity_cuj">Sdk Activity CUJ</string>
    <string name="register_sandbox_death_callback">Register DeathCallback</string>
    <string name="unregister_sandbox_death_callback">Unregister DeathCallback</string>
    <string name="trigger_sandbox_death">SDK: Kill Sandbox Process</string>
    <string name="register_app_sdk">Register AppOwned SDK</string>
    <string name="unregister_app_sdk">Unregister AppOwned SDK</string>
    <string name="get_sandboxed_sdks_from_app">Get Sandboxed Sdks</string>
    <string name="get_sandboxed_sdks_from_sdk">SDK: Get Sandboxed Sdks</string>
    <string name="get_app_sdks_from_app">Get AppOwned Sdks</string>
    <string name="get_app_sdks_from_sdk">SDK: Get AppOwned Sdks</string>
    <string name="get_client_package_name">SDK: Get Client Package Name</string>
    <string name="write_to_test_sdk_storage">TestSDK: Write to File</string>
    <string name="read_from_test_sdk_storage">TestSDK: Read from File</string>
    <string name="write_to_mediatee_sdk_storage">MediateeSDK: Write to File</string>
    <string name="read_from_mediatee_sdk_storage">MediateeSDK: Read from File</string>
    <string name="register_client_importance_listener">Register Listener</string>
    <string name="unregister_client_importance_listener">Unregister Listener</string>
    <string name="start_sdk_activity">Start SDK Activity</string>
    <string name="log">Log: </string>
</resources>
