<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cujListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuj_list"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/loadTestSdkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_test_sdk"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/unloadTestSdkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unload_test_sdk"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/loadMediateeSdkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_mediatee_sdk"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/unloadMediateeSdkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unload_mediatee_sdk"
                android:textAllCaps="false"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/cujFragmentContent"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/log"/>
        <TextView
            android:id="@+id/logView"
            android:gravity="bottom"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:textColor="#000000"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/cujList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@layout/cuj_list">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
